# xsuspender

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  index.html  lint.sh  robots.txt  sitemap.txt  xappsuspender.conf  xsuspender.1.html
.github/: deploy-gh-pages.sh
.github/workflows/: ci.yml  deploy-docs.yml
.travis/: deploy-gh-pages.sh  man2html.sh
data/: xsuspender.conf  xsuspender.desktop
debian/: changelog  control  copyright  examples  install  manpages  postrm  rules  watch
doc/: xsuspender.1
src/: CMakeLists.txt  config.c  config.h  entry.c  entry.h  events.c  events.h  exec.c  exec.h  macros.h  main.c  proc.c  proc.h  rule.c  rule.h  xsuspender.c  xsuspender.h
